--- a/network.ipynb
+++ b/network.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "The programm uses a competitive hopfield neural network to segment the image shown in the provided papers [(1)](https://www.researchgate.net/publication/262363260_Segmentation_of_industrial_X-ray_images) [(2)](https://www.researchgate.net/publication/3220680_Application_of_competitive_Hopfield_neural_network_to_medical_image_segmentation)\n",
     "\n",
-    "A hopfield neuroal network minimizes it's energy function $E=-\\sum_{i=1}^N\\sum_{j=1}^N w_{ij} v_i v_j - \\sum_{i=1}^n I_i v_i$\n",
+    "A hopfield neural network minimizes it's energy function $E=-\\sum_{i=1}^N\\sum_{j=1}^N w_{ij} v_i v_j - \\sum_{i=1}^n I_i v_i$\n",
     "\n",
     "Gray levels in the same segment have to be similar in relative frequency in the image and color. Adjacent segments should have significant differences in frequency. By minimizing these distances within segments we get to a solution for the segmentation.\n",
     "\n",
