--- a/network.ipynb
+++ b/network.ipynb
@@ -16,7 +16,7 @@
     "$w_{x,i;y,i}=-\\frac{H_y V_{y,i}}{\\sum_{y=1}^n H_y * V_{y,i}}V_{x,i} DIS_{x,y}$\n",
     "\n",
     "The energy function can be then calculated as:\n",
-    "$E=\\sum_{x=1}^n\\sum_{y=1}^n\\sum_{i=1}^c\\frac{H_y * V_{y,i}}{\\sum_{y=1}^n H_y * V_{y,i}} DIS_{x,y}$\n",
+    "$E=\\sum_{x=1}^n\\sum_{y=1}^n\\sum_{i=1}^c\\frac{H_y * V_{y,i}}{\\sum_{y=1}^n H_y * V_{y,i}} DIS_{x,y} * V_{x,i}$\n",
     "\n",
     "Neurons that have similar gray-levels and frequencies are more likley to be grouped together\n",
     "\n",
