--- a/network.ipynb
+++ b/network.ipynb
@@ -34,6 +34,7 @@
     "\\end{matrix}\n",
     "$$\n",
     "\n",
+    "The algorithm can be broken down to 5 steps:\n",
     "1. Input the gray levels of n (colors of the image, n = 256 for 8bit images), $G = \\set{g_1, g_2, \\dots, g_n}$ and the number of classes in the image c\n",
     "2. Compute the DIS matrix and histogram H\n",
     "\n",
